--- a/src/app/components/line-status/line-status.component.html
+++ b/src/app/components/line-status/line-status.component.html
@@ -1,6 +1,25 @@
 <div class="ls-visor">
-  <div class="zoom-container">
-    <div class="ls-map" cdkDrag>
+  <div
+    class="zoom-container"
+    [ngStyle]="{
+      'transform': 'matrix(' + zoomLevel + ', 0, 0, ' + zoomLevel + ', 0, 0)',
+      'transform-origin': zoomOrigin.x + 'px ' + zoomOrigin.y + 'px',
+      'width': canvasSize.width,
+      'height': canvasSize.height
+    }"
+    (wheel)="adjustZoom($event)"
+  >
+    <div
+      cdkDrag
+      class="ls-map"
+      (cdkDragMoved)="onDrag($event)"
+      (cdkDragStarted)="onDragStart($event)"
+      [ngStyle]="{
+        'width': canvasSize.width + 'px',
+        'height': canvasSize.height + 'px'
+      }"
+    >
+      <div class="box" cdkDragBoundary=".ls-map" cdkDrag></div>
       <div class="box" cdkDragBoundary=".ls-map" cdkDrag></div>
     </div>
   </div>
