--- a/src/app/components/line-status/line-status.component.scss
+++ b/src/app/components/line-status/line-status.component.scss
@@ -12,18 +12,9 @@
 
 .zoom-container {
   background-color: red;
-  position: absolute;
-  transform-origin: 0 0;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  // transform: matrix(.5, 0, 0, .5, 0, 0);
 }
 
 .ls-map {
-  width: 2000px;
-  height: 2000px;
   background-color: rgb(68, 140, 198);
   position: relative;
   cursor: move;
@@ -41,6 +32,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
   }
 
   // &:active {
