--- a/src/app/line-status/line-status.component.scss
+++ b/src/app/line-status/line-status.component.scss
@@ -3,7 +3,7 @@
 }
 
 .ls-visor {
-  background-color: #fff;
+  background-color: #8c9399;
   width: 100%;
   height: 768px;
   overflow: hidden;
@@ -11,16 +11,21 @@
 }
 
 .zoom-container {
-  background-color: red;
-  position: absolute;
+  background-color: rgb(110, 158, 148);
+  width: 100%;
+  height: 100%;
+  // position: absolute;
+  // transition: transform linear 0.1s;
 }
 
 .ls-map {
-  background-color: rgb(68, 140, 198);
+  background-color: rgb(124, 132, 146);
+  border: 1px dashed red;
   position: relative;
   cursor: move;
   left: 0;
   top: 0;
+  // transition: transform 0.1s;
 
   &:active {
     cursor: grabbing;
