--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,11 @@ body {
   padding: 0;
   background-color: #abaeb7;
 }
+
+.gridster-row {
+  border: dashed 1px rgba(0,0,0,.1) !important;
+}
+
+.gridster-column {
+  border: dashed 1px rgba(0,0,0,.1) !important;
+}
